<resources>
    <string name="app_name">모동숲 가이드북</string>
    <string name="title_activity_creature_book">생물 도감</string>
    <string name="title_activity_realtime_book">실시간 도감</string>
    <string name="title_activity_insect_book">곤충 도감</string>
    <string name="title_activity_fish_book">물고기 도감</string>
    <string name="title_activity_art_book">그림 도감</string>
    <string name="title_activity_fossil_book">화석 도감</string>
    <string name="title_activity_diy_list">DIY 레시피 목록</string>
    <string name="title_activity_achievement_list">너굴 마일리지 목록</string>
    <string name="title_activity_villager_list">주민 목록</string>
    <string name="title_activity_reaction_list">리액션 목록</string>

    <string name="source">자료 및 출처 : https://animalcrossing.soopoolleaf.com/ko/acnh/</string>
    <string name="source_app_icon">https://freeicons.io/regular-life-icons/book-bookmark-icon-17768</string>
    <string name="source_app_logo">https://commons.wikimedia.org/wiki/File:Animal_Crossing_Leaf.png</string>


    <string name="yes">응</string>
    <string name="no">아니</string>
    <string name="yes_common">네</string>
    <string name="no_common">아니오</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="open">열기</string>
    <string name="close">닫기</string>
    <string name="front">앞으로</string>
    <string name="back">뒤로</string>
    <string name="success">성공</string>
    <string name="exit">종료</string>
    <string name="retry">다시 시도</string>
    <string name="do_it">하기</string>
    <string name="do_not_it">하지 않기</string>
    <string name="receive_it">받기</string>
    <string name="receive_not_it">받지 않기</string>
    <string name="afterward_do_it">나중에 하기</string>

    <string name="action_first_app_start_title">앱을 처음 실행하셨네요!</string>
    <string name="action_first_app_start_message">업데이트 서버에서 자료를 받아와야 합니다.\n자료를 받아올까요?</string>
    <string name="action_success_connect_to_server_title">업데이트 서버에 연결하는데 성공했습니다.</string>
    <string name="action_failure_connect_to_server_title">업데이트 서버와 연결하는데 실패했습니다.</string>
    <string name="action_failure_connect_count_max_title">업데이트 서버와 연결하는데 실패했습니다.</string>
    <string name="action_failure_connect_count_max_message">인터넷 상태가 좋지 않은 것 같아요,\n나중에 다시 시도해주세요.</string>
    <string name="action_failure_connect_to_server_message">연결하기 위해 다시 시도할까요?</string>
    <string name="action_found_to_update_title">업데이트가 있습니다.</string>
    <string name="action_found_to_update_message">업데이트할까요?</string>
    <string name="action_cancel_update_title">업데이트를 취소할까요?</string>
    <string name="action_error_cancel_update_title">알 수 없는 오류로 인해 업데이트가 취소되었습니다.</string>
    <string name="action_error_cancel_update_message">업데이트를 다시 시도할까요?</string>
    <string name="action_exit">\'뒤로\'버튼을 한 번 더 누르면 앱이 종료됩니다.</string>

    <string name="status_connecting_to_server">업데이트 서버와 연결 중입니다.</string>
    <string name="status_failure_connect_to_server">서버와 연결하는데 실패했습니다.</string>
    <string name="status_updating">업데이트 중입니다.</string>
    <string name="status_require_update">업데이트가 필요해요.</string>
    <string name="status_not_require_update">업데이트가 필요하지 않아요.</string>
    <string name="status_latest_update">현재 모든 자료가 최신버전이에요!</string>
    <string name="status_unimplemented_function">구현되지 않은 기능이에요.</string>
</resources>

<!--
https://developer.android.com/guide/topics/resources/string-resource?hl=ko 문자열 관련 reference
-->