<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/creatureBookToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/creatureBookTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabBackground="@color/colorBackground"
        app:tabGravity="fill"
        app:tabMode="fixed">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/realtimeTabitem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_realtime_book" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/insectTabitem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_insect_book" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/fishTabitem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_fish_book" />
    </com.google.android.material.tabs.TabLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/creatureDateSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:dropDownWidth="wrap_content"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/creatureTimeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/realtimeRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/insectRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fishRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="gone" />

</LinearLayout>